--- a/1-3/css-design/index.html
+++ b/1-3/css-design/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p>cssテスト</p>
+    <!-- <p>cssテスト</p>
     <p id="id名"></p>
-    <p class="class名"></p>
+    <p class="class名"></p> -->
+    <div class="title-wrap">
+      <h3 class="title">要素</h3>
+    </div>
   </body>
 </html>
